2019-07-26  Florian Weimer  <fweimer@redhat.com>
	    Mark Wielaard  <mark@klomp.org>

	* Makefile.am (bin_PROGRAMS): Add elfclassify.
	(elfclassify_LDADD): New variable.
	* elfclassify.c: New tool.

2019-07-13  Mao Han  <han_mao@c-sky.com>

	* elflint.c: Add C-SKY.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_ehdr): Use dwelf_elf_e_machine_string instead of
	ebl->name. If unknown print hex value.

2019-06-25  Mark Wielaard  <mark@klomp.org>

	* stack.c (parse_opt): Fix dwfl_core_file_attach error message.

2019-06-18  Mark Wielaard  <mark@klomp.org>

	* strip.c (handle_elf): Use elf_begin ELF_C_WRITE, instead of
	ELF_C_WRITE_MMAP.

2019-05-10  Mark Wielaard  <mark@klomp.org>

	* readelf.c (struct attrcb_args): Rename die to dies.
	(attr_callback): Get current current die using dies[level].
	Handle DW_AT_discr_list as block, not as constant.
	(print_debug_units): pass dies, not dies[level] as args.

2019-05-09  Mark Wielaard  <mark@klomp.org>

	* readelf.c (cleanup_list): New function.
	(main): Call cleanup_list for dump_data_sections and string_sections.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (add_new_section_symbols): Call ELF_CHECK after
	gelf_getsymshndx.
	(new_shstrtab): Call ELF_CHECK after gelf_getshdr.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* size.c (show_sysv): Call INTERNAL_ERROR if gelf_getshdr
	returns NULL.
	(show_sysv_one_line): Call error with EXIT_FAILURE if
	gelf_getshdr returns NULL.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* nm.c (show_symbols_sysv): Check gelf_getshdr doesn't return
	NULL. Simplify naming of invalid sections, don't use alloca.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* elfcmp.c (main): Check shdr1 and shdr2 are not NULL.

2019-04-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Print DW_AT_data_member_location as
	decimal offset, not hex number.

2019-03-29  Mark Wielaard  <mark@klomp.org>
